加入语音模块支持
